--- a/package.json
+++ b/package.json
@@ -8,10 +8,7 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist",
-    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages",
-    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages"
-    
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
